--- a/players.html
+++ b/players.html
@@ -195,10 +195,6 @@
         <h1 style="text-align: center; margin-bottom: 30px; background: linear-gradient(45deg, var(--accent-color), var(--primary-color)); -webkit-background-clip: text; background-clip: text; color: transparent;">Análise Detalhada de Jogadores</h1>
 
         <div class="filters">
-            <select id="playerFilter">
-                <option value="">Todos os Jogadores</option>
-                <!-- Players will be dynamically populated -->
-            </select>
             <select id="leagueFilter">
                 <option value="">Todas as Ligas</option>
                 <option value="Esoccer Battle - 8 mins play">Esoccer Battle - 8 mins</option>
@@ -207,6 +203,16 @@
                 <option value="Esoccer H2H GG League - 8 mins play">Esoccer H2H GG League - 8 mins</option>
                 <option value="Esoccer Adriatic League - 10 mins play">Esoccer Adriatic League - 10 mins</option>
             </select>
+            
+            <div class="players-comparison">
+                <select id="player1Filter">
+                    <option value="">Selecione Jogador 1</option>
+                </select>
+                <span class="vs-text">VS</span>
+                <select id="player2Filter">
+                    <option value="">Selecione Jogador 2</option>
+                </select>
+            </div>
         </div>
 
         <div id="playerAnalysisContainer"></div>
@@ -225,7 +231,7 @@
             return match ? match[1] : text;
         }
 
-        function aggregatePlayerStats(playerResults) {
+        function calculatePlayerStats(playerResults) {
             const stats = {
                 totalMatches: playerResults.length,
                 wins: 0,
@@ -233,39 +239,33 @@
                 losses: 0,
                 goalsScored: 0,
                 goalsReceived: 0,
-                avgGoalsPerMatch: 0,
-                avgGoalsHT: 0,
-                leagues: new Set()
+                winRate: 0,
+                avgGoalsScored: 0,
+                avgGoalsReceived: 0
             };
 
             playerResults.forEach(result => {
-                stats.leagues.add(result.leagueName);
-
                 const [homeScore, awayScore] = result.score.split('-').map(Number);
-                const [homeHTScore, awayHTScore] = (result.scoreHT || '0-0').split('-').map(Number);
+                const isHome = result.home.includes(playerResults[0].home);
 
-                if (result.home.includes(playerResults[0].home)) {
+                if (isHome) {
                     stats.goalsScored += homeScore;
                     stats.goalsReceived += awayScore;
-                    stats.avgGoalsHT += homeHTScore;
-
                     if (homeScore > awayScore) stats.wins++;
                     else if (homeScore < awayScore) stats.losses++;
                     else stats.draws++;
                 } else {
                     stats.goalsScored += awayScore;
                     stats.goalsReceived += homeScore;
-                    stats.avgGoalsHT += awayHTScore;
-
                     if (awayScore > homeScore) stats.wins++;
                     else if (awayScore < homeScore) stats.losses++;
                     else stats.draws++;
                 }
             });
 
-            stats.avgGoalsPerMatch = (stats.goalsScored / stats.totalMatches).toFixed(2);
-            stats.avgGoalsHT = (stats.avgGoalsHT / stats.totalMatches).toFixed(2);
-            stats.leagues = Array.from(stats.leagues);
+            stats.winRate = (stats.wins / stats.totalMatches) * 100;
+            stats.avgGoalsScored = stats.goalsScored / stats.totalMatches;
+            stats.avgGoalsReceived = stats.goalsReceived / stats.totalMatches;
 
             return stats;
         }
@@ -275,7 +275,7 @@
             return response.json();
         }
 
-        async function updatePlayerAnalysis() {
+        async function updatePlayersList(selectedLeague) {
             try {
                 const [data1, data2, data3] = await Promise.all([
                     fetchData('https://api.green365.com.br/api/events/ended?sport_id=4&competition_id=&page=1'),
@@ -284,157 +284,112 @@
                 ]);
 
                 const allResults = [...data1.data, ...data2.data, ...data3.data];
-                const playerFilter = document.getElementById('playerFilter');
                 const players = new Set();
 
-                // Populate players dropdown
+                // Filtrar jogadores pela liga selecionada
                 allResults.forEach(result => {
-                    players.add(extractPlayerName(result.home));
-                    players.add(extractPlayerName(result.away));
-                });
-
-                playerFilter.innerHTML = '<option value="">Todos os Jogadores</option>';
-                players.forEach(player => {
-                    const option = document.createElement('option');
-                    option.value = player;
-                    option.textContent = player;
-                    playerFilter.appendChild(option);
-                });
-
-                const playerAnalysisContainer = document.getElementById('playerAnalysisContainer');
-                const selectedPlayer = document.getElementById('playerFilter').value;
-                const selectedLeague = document.getElementById('leagueFilter').value;
-
-                playerAnalysisContainer.innerHTML = '';
-
-                // Group results by player
-                const playerGroups = {};
-                allResults.forEach(result => {
-                    const homePlayer = extractPlayerName(result.home);
-                    const awayPlayer = extractPlayerName(result.away);
-
-                    if (selectedPlayer === '' || selectedPlayer === homePlayer || selectedPlayer === awayPlayer) {
-                        if (selectedLeague === '' || result.leagueName === selectedLeague) {
-                            if (result.home.includes(homePlayer)) {
-                                playerGroups[homePlayer] = playerGroups[homePlayer] || [];
-                                playerGroups[homePlayer].push(result);
-                            }
-                            if (result.away.includes(awayPlayer)) {
-                                playerGroups[awayPlayer] = playerGroups[awayPlayer] || [];
-                                playerGroups[awayPlayer].push(result);
-                            }
-                        }
+                    if (!selectedLeague || result.leagueName === selectedLeague) {
+                        players.add(extractPlayerName(result.home));
+                        players.add(extractPlayerName(result.away));
                     }
                 });
 
-                // Create analysis cards for each player
-                Object.keys(playerGroups).forEach(player => {
-                    const playerResults = playerGroups[player];
-                    const stats = aggregatePlayerStats(playerResults);
+                // Atualizar ambos os selects de jogadores
+                const playersArray = Array.from(players).sort();
+                const player1Select = document.getElementById('player1Filter');
+                const player2Select = document.getElementById('player2Filter');
 
-                    const card = document.createElement('div');
-                    card.className = 'player-analysis-card';
-                    card.innerHTML = `
-                        <div class="player-header">
-                            <div class="player-name">${player}</div>
-                        </div>
-                        <div class="stats-grid">
-                            <div class="stat-card">
-                                <div class="stat-value">${stats.totalMatches}</div>
-                                <div class="stat-label">Total de Jogos</div>
-                            </div>
-                            <div class="stat-card">
-                                <div class="stat-value">${stats.wins}</div>
-                                <div class="stat-label">Vitórias</div>
-                            </div>
-                            <div class="stat-card">
-                                <div class="stat-value">${stats.draws}</div>
-                                <div class="stat-label">Empates</div>
-                            </div>
-                            <div class="stat-card">
-                                <div class="stat-value">${stats.losses}</div>
-                                <div class="stat-label">Derrotas</div>
-                            </div>
-                            <div class="stat-card">
-                                <div class="stat-value">${stats.goalsScored}</div>
-                                <div class="stat-label">Gols Marcados</div>
-                            </div>
-                            <div class="stat-card">
-                                <div class="stat-value">${stats.goalsReceived}</div>
-                                <div class="stat-label">Gols Sofridos</div>
-                            </div>
-                            <div class="stat-card">
-                                <div class="stat-value">${stats.avgGoalsPerMatch}</div>
-                                <div class="stat-label">Média de Gols por Jogo</div>
-                            </div>
-                            <div class="stat-card">
-                                <div class="stat-value">${stats.avgGoalsHT}</div>
-                                <div class="stat-label">Média de Gols no 1º Tempo</div>
-                            </div>
-                        </div>
-                        <div class="chart-container">
-                            <div class="stat-label">Ligas</div>
-                            <div class="legend">
-                                ${stats.leagues.map(league => `
-                                    <div class="legend-item">
-                                        <div class="legend-color" style="background-color: ${getLeagueColor(league)}"></div>
-                                        ${league}
-                                    </div>
-                                `).join('')}
-                            </div>
-                        </div>
-                    `;
+                player1Select.innerHTML = '<option value="">Selecione Jogador 1</option>';
+                player2Select.innerHTML = '<option value="">Selecione Jogador 2</option>';
 
-                    playerAnalysisContainer.appendChild(card);
+                playersArray.forEach(player => {
+                    player1Select.add(new Option(player, player));
+                    player2Select.add(new Option(player, player));
                 });
             } catch (error) {
-                console.error('Erro ao buscar análise de jogadores:', error);
-                const playerAnalysisContainer = document.getElementById('playerAnalysisContainer');
-                playerAnalysisContainer.innerHTML = `
-                    <div style="text-align: center; padding: 20px; color: var(--danger-color);">
-                        Erro ao carregar análise de jogadores. Por favor, tente novamente.<br>
-                        <small style="display: block; margin-top: 10px; color: var(--text-secondary);">
-                            ${error.message}
-                        </small>
+                console.error('Erro ao buscar jogadores:', error);
+            }
+        }
+
+        async function comparePlayersAndShowStats() {
+            const player1 = document.getElementById('player1Filter').value;
+            const player2 = document.getElementById('player2Filter').value;
+            const selectedLeague = document.getElementById('leagueFilter').value;
+
+            if (!player1 || !player2) return;
+
+            try {
+                const [data1, data2, data3] = await Promise.all([
+                    fetchData('https://api.green365.com.br/api/events/ended?sport_id=4&competition_id=&page=1'),
+                    fetchData('https://api.green365.com.br/api/events/ended?sport_id=4&competition_id=&page=2'),
+                    fetchData('https://api.green365.com.br/api/events/ended?sport_id=4&competition_id=&page=3')
+                ]);
+
+                const allResults = [...data1.data, ...data2.data, ...data3.data]
+                    .filter(result => !selectedLeague || result.leagueName === selectedLeague);
+
+                const player1Results = allResults.filter(result => 
+                    result.home.includes(player1) || result.away.includes(player1));
+                const player2Results = allResults.filter(result => 
+                    result.home.includes(player2) || result.away.includes(player2));
+
+                const stats1 = calculatePlayerStats(player1Results);
+                const stats2 = calculatePlayerStats(player2Results);
+
+                // Calcular probabilidades
+                const totalWinRate = stats1.winRate + stats2.winRate;
+                const player1Probability = (stats1.winRate / totalWinRate * 100).toFixed(1);
+                const player2Probability = (stats2.winRate / totalWinRate * 100).toFixed(1);
+
+                const container = document.getElementById('playerAnalysisContainer');
+                container.innerHTML = `
+                    <div class="comparison-container">
+                        <div class="player-card ${Number(player1Probability) > Number(player2Probability) ? 'favorite' : ''}">
+                            <h3>${player1}</h3>
+                            <div class="stats">
+                                <p>Vitórias: ${stats1.wins} (${stats1.winRate.toFixed(1)}%)</p>
+                                <p>Empates: ${stats1.draws}</p>
+                                <p>Derrotas: ${stats1.losses}</p>
+                                <p>Média Gols Marcados: ${stats1.avgGoalsScored.toFixed(2)}</p>
+                                <p>Média Gols Sofridos: ${stats1.avgGoalsReceived.toFixed(2)}</p>
+                                <div class="probability">
+                                    <h4>Probabilidade de Vitória</h4>
+                                    <div class="probability-value">${player1Probability}%</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="vs-indicator">VS</div>
+                        <div class="player-card ${Number(player2Probability) > Number(player1Probability) ? 'favorite' : ''}">
+                            <h3>${player2}</h3>
+                            <div class="stats">
+                                <p>Vitórias: ${stats2.wins} (${stats2.winRate.toFixed(1)}%)</p>
+                                <p>Empates: ${stats2.draws}</p>
+                                <p>Derrotas: ${stats2.losses}</p>
+                                <p>Média Gols Marcados: ${stats2.avgGoalsScored.toFixed(2)}</p>
+                                <p>Média Gols Sofridos: ${stats2.avgGoalsReceived.toFixed(2)}</p>
+                                <div class="probability">
+                                    <h4>Probabilidade de Vitória</h4>
+                                    <div class="probability-value">${player2Probability}%</div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 `;
+            } catch (error) {
+                console.error('Erro ao comparar jogadores:', error);
             }
         }
 
-        function getLeagueColor(leagueName) {
-            const leagueMappings = {
-                "Esoccer Battle - 8 mins play": "#FF4C4C",
-                "Esoccer Battle Volta - 6 mins play": "#FFD700",
-                "Esoccer GT Leagues – 12 mins play": "#32CD32",
-                "Esoccer H2H GG League - 8 mins play": "#8A2BE2",
-                "Esoccer Adriatic League - 10 mins play": "#1E90FF"
-            };
-            return leagueMappings[leagueName] || "#FFFFFF";
-        }
-
-        // Event Listeners for Filters
-        document.getElementById('playerFilter').addEventListener('change', updatePlayerAnalysis);
-        document.getElementById('leagueFilter').addEventListener('change', updatePlayerAnalysis);
-
-        // Initial Load
-        updatePlayerAnalysis();
-
-        // Periodic Updates
-        setInterval(updatePlayerAnalysis, 15000);
-
-        // Update on visibility change
-        document.addEventListener('visibilitychange', function () {
-            if (document.visibilityState === 'visible') {
-                updatePlayerAnalysis();
-            }
+        // Event Listeners
+        document.getElementById('leagueFilter').addEventListener('change', function() {
+            updatePlayersList(this.value);
         });
 
-        window.addEventListener('focus', updatePlayerAnalysis);
-        window.addEventListener('pageshow', function (event) {
-            if (event.persisted) {
-                updatePlayerAnalysis();
-            }
-        });
+        document.getElementById('player1Filter').addEventListener('change', comparePlayersAndShowStats);
+        document.getElementById('player2Filter').addEventListener('change', comparePlayersAndShowStats);
+
+        // Inicialização
+        updatePlayersList('');
     </script>
 </body>
 </html>
