--- a/formularioApostas.html
+++ b/formularioApostas.html
@@ -16,20 +16,21 @@
     }
 
     body {
-      background: linear-gradient(135deg, #121212, #1e1e1e);
+      background: linear-gradient(135deg, #0f172a, #1e293b);
       color: #e0e0e0;
       min-height: 100vh;
     }
 
     /* Container principal */
     .container {
-      background: rgba(30, 30, 30, 0.9);
-      backdrop-filter: blur(10px);
-      border-radius: 16px;
-      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
+      background: rgba(30, 41, 59, 0.95);
+      backdrop-filter: blur(12px);
+      border-radius: 24px;
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
       max-width: 100%;
       padding: 0;
       margin: 0;
+      border: 1px solid rgba(255, 255, 255, 0.1);
     }
 
     .app-container {
@@ -204,19 +205,36 @@
 
     .submit-button {
       width: 100%;
-      padding: 14px;
+      padding: 16px;
       border: none;
-      border-radius: 12px;
-      background: linear-gradient(135deg, #bb86fc, #a370e0);
-      color: #000;
+      border-radius: 16px;
+      background: linear-gradient(135deg, #6366f1, #8b5cf6);
+      color: #fff;
       font-weight: 600;
       cursor: pointer;
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
+      transition: all 0.3s ease;
+      position: relative;
+      overflow: hidden;
     }
 
     .submit-button:hover {
       transform: translateY(-2px);
-      box-shadow: 0 4px 12px rgba(187, 134, 252, 0.3);
+      box-shadow: 0 8px 20px rgba(99, 102, 241, 0.4);
+    }
+
+    .submit-button::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: -100%;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.2), transparent);
+      transition: 0.5s;
+    }
+
+    .submit-button:hover::after {
+      left: 100%;
     }
 
     /* Resumo */
@@ -362,16 +380,18 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 16px;
-      background: rgba(255, 255, 255, 0.05);
-      border-radius: 12px;
-      border-left: 4px solid #333;
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
+      padding: 20px;
+      background: rgba(255, 255, 255, 0.03);
+      border-radius: 16px;
+      border-left: 4px solid #6366f1;
+      transition: all 0.3s ease;
+      backdrop-filter: blur(8px);
     }
 
     .aposta-item:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+      transform: translateY(-3px);
+      box-shadow: 0 8px 24px rgba(99, 102, 241, 0.2);
+      background: rgba(255, 255, 255, 0.05);
     }
 
     .aposta-info {
